--- a/index.html
+++ b/index.html
@@ -30,48 +30,63 @@
 				</div>
 				<div id="movieWrap1" class="movieWrap">
 					<div id="scrim1" class="scrim"></div>
+					<img src="img/goodAsItGets.jpg" alt="As Good as it Gets" class="fullPoster">
 				</div>
 				<div id="movieWrap2" class="movieWrap">
 					<div id="scrim2" class="scrim"></div>
+					<img src="img/lebowski.jpg" alt="The big Lebowski" class="fullPoster">
 				</div>
 				<div id="movieWrap3" class="movieWrap">
 					<div id="scrim3" class="scrim"></div>
+					<img src="img/wonderBoys.jpg" alt="Wonder Boys" class="fullPoster">
 				</div>
 				<div id="movieWrap4" class="movieWrap">
 					<div id="scrim4" class="scrim"></div>
+					<img src="img/joeVersusTheVolcano.jpg" alt="Joe Versus the Volcano" class="fullPoster">
 				</div>
 				<div id="movieWrap5" class="movieWrap">
 					<div id="scrim5" class="scrim"></div>
+					<img src="img/bigYear.jpg" alt="The Big Year" class="fullPoster">
 				</div>
 				<div id="movieWrap6" class="movieWrap">
 					<div id="scrim6" class="scrim"></div>
+					<img src="img/Uncorked.jpg" alt="Uncorked" class="fullPoster">
 				</div>
 				<div id="movieWrap7" class="movieWrap">
 					<div id="scrim7" class="scrim"></div>
+					<img src="img/fearAndLoathing.jpg" alt="Fear and Loathing in Las Vegas" class="fullPoster">
 				</div>
 				<div id="movieWrap8" class="movieWrap">
 					<div id="scrim8" class="scrim"></div>
+					<img src="img/royalTenenbaums.jpg" alt="The Royal Tenenbaums" class="fullPoster">
 				</div>
 				<div id="movieWrap9" class="movieWrap">
 					<div id="scrim9" class="scrim"></div>
+					<img src="img/doors.jpg" alt="The Doors" class="fullPoster">
 				</div>
 				<div id="movieWrap10" class="movieWrap">
 					<div id="scrim10" class="scrim"></div>
+					<img src="img/shawshank.jpg" alt="The Shawshank Redemption" class="fullPoster">
 				</div>
 				<div id="movieWrap11" class="movieWrap">
 					<div id="scrim11" class="scrim"></div>
+					<img src="img/inglouriousBasterds.jpg" alt="Inglourious Basterds" class="fullPoster">
 				</div>
 				<div id="movieWrap12" class="movieWrap">
 					<div id="scrim12" class="scrim"></div>
+					<img src="img/catchMeIfYouCan.jpg" alt="Catch Me If You Can" class="fullPoster">
 				</div>
 				<div id="movieWrap13" class="movieWrap">
 					<div id="scrim13" class="scrim"></div>
+					<img src="img/anonymous.jpg" alt="Anonymous" class="fullPoster">
 				</div>
 				<div id="movieWrap14" class="movieWrap">
 					<div id="scrim14" class="scrim"></div>
+					<img src="img/birdsOfAmerica.jpg" alt="Birds of America" class="fullPoster">
 				</div>
 				<div id="movieWrap15" class="movieWrap">
 					<div id="scrim15" class="scrim"></div>
+					<img src="img/theProfessional.jpg" alt="The Professional" class="fullPoster">
 				</div>
 			</div>	
 			<div class="modalWrap" id="modalWrap">
@@ -96,21 +111,51 @@
 						</form>
 						<div id="movieInfoWrap">
 							<ul id="movie0" class="movieInfo"></ul>
-							<ul id="movie1" class="movieInfo"></ul>
-							<ul id="movie2" class="movieInfo"></ul>
-							<ul id="movie3" class="movieInfo"></ul>
-							<ul id="movie4" class="movieInfo"></ul>
-							<ul id="movie5" class="movieInfo"></ul>
-							<ul id="movie6" class="movieInfo"></ul>
-							<ul id="movie7" class="movieInfo"></ul>
-							<ul id="movie8" class="movieInfo"></ul>
-							<ul id="movie9" class="movieInfo"></ul>
-							<ul id="movie10" class="movieInfo"></ul>
-							<ul id="movie11" class="movieInfo"></ul>
-							<ul id="movie12" class="movieInfo"></ul>
-							<ul id="movie13" class="movieInfo"></ul>
-							<ul id="movie14" class="movieInfo"></ul>
-							<ul id="movie15" class="movieInfo"></ul>
+							<ul id="movie1" class="movieInfo">
+								<li><img src="img/goodAsItGets.jpg" alt="As Good as it Gets"></li>
+							</ul>
+							<ul id="movie2" class="movieInfo">
+								<li><img src="img/lebowski.jpg" alt="The big Lebowski"></li>
+							</ul>
+							<ul id="movie3" class="movieInfo">
+								<li><img src="img/wonderBoys.jpg" alt="Wonder Boys" class="fullPoster"></li>
+							</ul>
+							<ul id="movie4" class="movieInfo">
+								<li><img src="img/joeVersusTheVolcano.jpg" alt="Joe Versus the Volcano" class="fullPoster"></li>
+							</ul>
+							<ul id="movie5" class="movieInfo">
+								<li><img src="img/bigYear.jpg" alt="The Big Year" class="fullPoster"></li>
+							</ul>
+							<ul id="movie6" class="movieInfo">
+								<li><img src="img/Uncorked.jpg" alt="Uncorked" class="fullPoster"></li>
+							</ul>
+							<ul id="movie7" class="movieInfo">
+								<li><img src="img/fearAndLoathing.jpg" alt="Fear and Loathing in Las Vegas" class="fullPoster"></li>
+							</ul>
+							<ul id="movie8" class="movieInfo">
+								<li><img src="img/royalTenenbaums.jpg" alt="The Royal Tenenbaums" class="fullPoster"></li>
+							</ul>
+							<ul id="movie9" class="movieInfo">
+								<li><img src="img/doors.jpg" alt="The Doors" class="fullPoster"></li>
+							</ul>
+							<ul id="movie10" class="movieInfo">
+								<li><img src="img/shawshank.jpg" alt="The Shawshank Redemption" class="fullPoster"></li>
+							</ul>
+							<ul id="movie11" class="movieInfo">
+								<li><img src="img/inglouriousBasterds.jpg" alt="Inglourious Basterds" class="fullPoster"></li>
+							</ul>
+							<ul id="movie12" class="movieInfo">
+								<li><img src="img/catchMeIfYouCan.jpg" alt="Catch Me If You Can" class="fullPoster"></li>
+							</ul>
+							<ul id="movie13" class="movieInfo">
+								<li><img src="img/anonymous.jpg" alt="Anonymous" class="fullPoster"></li>
+							</ul>
+							<ul id="movie14" class="movieInfo">
+								<li><img src="img/birdsOfAmerica.jpg" alt="Birds of America" class="fullPoster"></li>
+							</ul>
+							<ul id="movie15" class="movieInfo">
+								<li><img src="img/theProfessional.jpg" alt="The Professional" class="fullPoster"></li>
+							</ul>
 							<div id="errorMessage" class="errorMessage">
 								<h2>Nothing to search for yet</h2>
 								<h2>Try typing a movie title into the search field above</h2>
