typo fix, added project note

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 				<div id="movieWrap6" class="movieWrap">
 					<div id="scrim6" class="scrim"></div>
-					<img src="img/Uncorked.jpg" alt="Uncorked" class="fullPoster">
+					<img src="img/uncorked.jpg" alt="Uncorked" class="fullPoster">
 				</div>
 				<div id="movieWrap7" class="movieWrap">
 					<div id="scrim7" class="scrim"></div>
@@ -87,6 +87,10 @@
 				<div id="movieWrap15" class="movieWrap">
 					<div id="scrim15" class="scrim"></div>
 					<img src="img/theProfessional.jpg" alt="The Professional" class="fullPoster">
+				</div>
+				<div class="projNote">
+					<h2>Project Note</h2>
+					<p>When I was working on this project on my local machine, I had all the movie posters loaded via IMDB URL, so even the search option returned an image of the poster of your favorite movie.  However, once I loaded the project to GitHub, this no longer worked.  Come to find out, this is called hotlinking and it eats bandwith, so my requests to IMDB for the jpgs were met with a 302 error - FORBIDDEN.  Now all images are embedded.  Bummer.  It felt cooler the other way.  <span class="smiley">: )</span></p>
 				</div>
 			</div>	
 			<div class="modalWrap" id="modalWrap">
@@ -127,7 +131,7 @@
 								<li><img src="img/bigYear.jpg" alt="The Big Year" class="fullPoster"></li>
 							</ul>
 							<ul id="movie6" class="movieInfo">
-								<li><img src="img/Uncorked.jpg" alt="Uncorked" class="fullPoster"></li>
+								<li><img src="img/uncorked.jpg" alt="Uncorked" class="fullPoster"></li>
 							</ul>
 							<ul id="movie7" class="movieInfo">
 								<li><img src="img/fearAndLoathing.jpg" alt="Fear and Loathing in Las Vegas" class="fullPoster"></li>
