--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="css/myStyles.css" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" />
-	<link href='https://fonts.googleapis.com/css?family=Lato|Cinzel' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato|Limelight' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="primeWrap">
